creusot/tests/should_fail/prusti/deny_zombies/old_var.stderr
error[creusot]: `T` cannot be moved from `'post` to `'pre` since it didn't exist at that point
 --> old_var.rs:5:24
  |
5 | #[ensures(old(x == old(result)))]
  |                        ^^^^^^

error: aborting due to previous error

